docs(programming): update README.md